k8s/keycloak/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yaml convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - env:
            - name: DB_ADDR
              value: postgres
            - name: DB_DATABASE
            - name: DB_PASSWORD
            - name: DB_USER
            - name: DB_VENDOR
              value: POSTGRES
            - name: KEYCLOAK_ADMIN
            - name: KEYCLOAK_ADMIN_PASSWORD
            - name: TZ
              value: Asia/Tokyo
          image: ghcr.io/syou551/keycloak:latest
          name: keycloak
          ports:
            - containerPort: 8080
              protocol: TCP
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /opt/keycloak/data
              name: keycloak-claim0
      restartPolicy: Always
      volumes:
        - name: keycloak-claim0
          persistentVolumeClaim:
            claimName: keycloak-claim0
