k8s/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
    - name: "8010"
      port: 8010
      targetPort: 8080
  selector:
    io.kompose.service: keycloak
